# apriltag_tracker

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
config/: params.yaml
include/apriltag_tracker/: AprilTagTracker.h  AprilTagTrackerRosWrapper.h
launch/: apriltag_detector.launch  apriltag_tracker.launch
nodes/: centered_mocap_and_tag_rebroadcaster.py  test_apriltag_tracker_wrapper
src/: AprilTagTracker.cpp  apriltag_detector_node.cpp  apriltag_tracker_node.cpp  apriltag_tracker_python_wrapper.cpp
