<package>
  <name>apriltag_tracker</name>
  <version>0.0.1</version>
  <description>A simple catkin ROS tag publisher for the apriltag_catkin library</description>
  <maintainer email="kumarsha@cs.cmu.edu">Kumar Shaurya Shankar</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>apriltags</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf</build_depend>


  <run_depend>roscpp</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>apriltags</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>tf</run_depend>


</package>
